# aoi-orgware

./: .coveragerc  .gitignore  CHANGELOG.md  CONTRIBUTING.md  IMPORT_MANIFEST.json  PROVENANCE.md  README.md  SECURITY.md  aoi.toml  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: docs.yml  publish.yml  test.yml
docs/: PILOT.md  POLICY.md  RELEASE.md  architecture.md  codebase-memory.md  configuration.md  evaluation.md  helper-canary-runbook.md  index.md  quickstart.md  recovery.md  resource_control.md  v0.2-migration.md  v0.3-adoption-plan.md  v0.3-plan.md  v0.4-plan.md
examples/: aoi.toml
examples/pilot/: README.md  run-record.example.json
notes/harness/: POLICY.md
notes/harness/templates/: checkpoint.md  packet.md  (+2 more)
release/: publication-policy.json
scripts/: local_install_bundle.py  release_inventory.py  release_pypi_readback.py  release_rehearsal.py  verify_dist.py  verify_release_ci.py
scripts/harness/: arise_harness.py  codex_hook.py  harnesslib.py  test_arise_harness.py
skills/aoi-bootstrap/: SKILL.md
src/aoi_orgware/: __init__.py  _version.py  agent_identity.py  claude_hook.py  cli.py  codebase_memory.py  codebase_memory_benchmark.py  codex_adapter_contracts.py  codex_app_server_stdio.py  codex_hook.py  codex_hook_receipts.py  codex_install_provenance.py  codex_tool_paths.py  codex_transport_authority.py  codex_transport_cli.py  codex_transport_contracts.py  codex_transport_controller.py  codex_transport_mutation.py  codex_transport_projection.py  codex_transport_runtime.py  cohort_runtime.py  cohorts.py  confidentiality.py  config.py  context_receipts.py  dispatch_protocol.py  evidence_artifacts.py  execution_policy.py  execution_topology.py  external_exports.py  git_plumbing.py  harnesslib.py  integrity_records.py  integrity_records_v2.py  job_integrity.py  local_install_proof.py  packet_integrity.py  permit_projection.py  permit_runtime.py  pilot.py  (+23 more)
tests/: __init__.py  atomic_crash_worker.py  codex_transport_cli_clock_driver.py  harness_case.py  permit_cli_clock_driver.py  state_lock_race_worker.py  test_architecture_boundaries.py  test_atomic_recovery.py  test_bootstrap.py  test_bootstrap_inspector.py  test_bounded_scans.py  test_claude_hook.py  test_cli.py  test_close_honesty.py  test_codebase_memory.py  test_codex_adapter_contracts.py  test_codex_app_server_stdio.py  test_codex_hook_receipts.py  test_codex_hook_receipts_v2.py  test_codex_hook_v2.py  test_codex_install_provenance.py  test_codex_tool_paths.py  test_codex_transport_authority.py  test_codex_transport_cli.py  test_codex_transport_contracts.py  test_codex_transport_controller.py  test_codex_transport_mutation.py  test_codex_transport_projection.py  test_codex_transport_reachability.py  test_codex_transport_runtime.py  test_cohort_cli.py  test_cohort_permit_runtime.py  test_cohort_runtime.py  test_cohorts.py  test_commands_backup.py  test_commands_capacity.py  test_commands_claude_onboarding.py  test_commands_codex_onboarding.py  test_commands_coordination.py  test_commands_execution_selection.py  (+67 more)
(+54 files in other folders)
