[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "aoi-orgware"
version = "0.1.0"
description = "Agent Organization Infrastructure for governed multi-agent engineering work"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [{name = "Ryan"}]
keywords = ["agents", "orchestration", "governance", "orgware"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: POSIX :: Linux",
]
dependencies = []

[project.scripts]
aoi = "aoi_orgware.cli:main"
aoi-codex-hook = "aoi_orgware.codex_hook:main"

[tool.hatch.build.targets.wheel]
packages = ["src/aoi_orgware"]

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/tests",
  "/docs",
  "/examples",
  "/README.md",
  "/SECURITY.md",
  "/LICENSE",
  "/pyproject.toml",
]
