[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "aoi-orgware"
dynamic = ["version"]
description = "Agent Organization Infrastructure for governed multi-agent engineering work"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [{name = "Ryan"}]
keywords = ["agents", "orchestration", "governance", "orgware"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Developers",
  "Environment :: Console",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Software Development :: Version Control :: Git",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Typing :: Typed",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/Ryan529616/aoi-orgware"
Repository = "https://github.com/Ryan529616/aoi-orgware"
Issues = "https://github.com/Ryan529616/aoi-orgware/issues"
Changelog = "https://github.com/Ryan529616/aoi-orgware/blob/main/CHANGELOG.md"

[project.scripts]
aoi = "aoi_orgware.cli:main"
aoi-codex-hook = "aoi_orgware.codex_hook:main"
aoi-codex-bridge = "aoi_orgware.codex_transport_cli:main"
aoi-claude-hook = "aoi_orgware.claude_hook:main"

[tool.pytest.ini_options]
# Scope collection to the real suite; the pilot sample project under
# src/aoi_orgware/resources/ ships an intentionally-failing test fixture.
testpaths = ["tests"]

[tool.hatch.version]
path = "src/aoi_orgware/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/aoi_orgware"]

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/tests",
  "/docs",
  "/examples",
  "/skills",
  "/README.md",
  "/SECURITY.md",
  "/CHANGELOG.md",
  "/LICENSE",
  "/pyproject.toml",
]
